Sprint 9 — Make a clean checkout dependable (#91)
* Clean misleading .gitignore rules

Removes the Maven/Gradle section: AGENTS.md rules out both build
tools, and its negation line carried a trailing comment - which git
reads as part of the pattern, so it never matched anything (verified
with git check-ignore -v before and after). Every rule the project
relies on still holds via the kept sections: build output (/build/),
downloaded jars (*.jar covering lib/ and lib/test/), and /imports/;
no pattern line carries a trailing comment; git status stays clean on
a fully built checkout and no previously ignored file became tracked.

206/206 tests pass.

Closes #87

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* Add a POSIX dependency bootstrap and readable failures

- scripts/download-libs.sh is the POSIX twin of download-libs.ps1:
  same four pinned jars to lib/ and lib/test/, idempotent, curl-based.
- scripts/lib-versions.env is the single authoritative pin set: the
  shell script sources it, the PowerShell script parses it, and the
  Makefile includes it - the three consumers cannot drift apart.
- The classes and test targets now depend on check-libs, which stops
  with a one-line instruction naming the download scripts instead of
  eight 'package does not exist' compiler errors.
- README offers the shell script on macOS/Linux, keeps PowerShell for
  Windows, and drops it from the unconditional requirements.

Verified on this machine with lib/ removed: make test stops with the
instruction; the shell bootstrap populates all four jars and a second
run downloads nothing; the PowerShell script (parsing the shared env)
produces byte-identical jars; make test passes after the shell
bootstrap. 206/206 tests.

Closes #80

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* Add the required pull-request test workflow

The test GitHub Actions workflow runs on pull requests to main and on
pushes to main: JDK 21 (temurin), pinned dependencies bootstrapped
with scri